--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@mui/icons-material": "^5.16.1",
     "@mui/material": "^5.16.1",
     "clsx": "^2.0.0",
+    "postcss-preset-env": "^10.0.2",
     "prism-react-renderer": "^2.3.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
